[gd_scene load_steps=12 format=2]

[ext_resource path="res://Juego/Naves/Player/player_orange.png" type="Texture" id=1]
[ext_resource path="res://Juego/Naves/Player/CameraPlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Juego/Naves/Player/Player.gd" type="Script" id=3]
[ext_resource path="res://Juego/Naves/Player/AnimacionesPlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://Juego/Proyectiles/Laser/LaserBeam2D.tscn" type="PackedScene" id=5]
[ext_resource path="res://Juego/Naves/Player/MaterialFisicoNave.tres" type="PhysicsMaterial" id=6]
[ext_resource path="res://Juego/Naves/Player/Motor/MotorSFX.tscn" type="PackedScene" id=7]
[ext_resource path="res://Juego/Naves/Player/estela/EstelaPuntoInicio.tscn" type="PackedScene" id=8]
[ext_resource path="res://Juego/Escudos/Escudo.tscn" type="PackedScene" id=9]
[ext_resource path="res://Juego/Naves/NaveBase.tscn" type="PackedScene" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 40.2492

[node name="Player" instance=ExtResource( 10 )]
scale = Vector2( 0.6, 0.6 )
z_index = 50
z_as_relative = false
collision_layer = 1
collision_mask = 22
physics_material_override = ExtResource( 6 )
contacts_reported = 2
contact_monitor = true
can_sleep = false
linear_damp = 1.5
angular_damp = 4.5
script = ExtResource( 3 )
hitpoints = 200.0
potencia_motor = 30
potencia_rotacion = 200
estela_maxima = 150

[node name="Sprite" parent="." index="0"]
rotation = 1.5708
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 1 )

[node name="Canion" parent="." index="2"]
danio_proyectil = 2

[node name="TimerEnfriamiento" parent="Canion" index="3"]
one_shot = true

[node name="Escudo" parent="." index="4" instance=ExtResource( 9 )]

[node name="EstelaPuntoInicio" parent="." index="5" instance=ExtResource( 8 )]

[node name="MotorSFX" parent="." index="6" instance=ExtResource( 7 )]

[node name="AnimationPlayer" parent="." index="7" instance=ExtResource( 4 )]

[node name="CameraPlayer" parent="." index="8" instance=ExtResource( 2 )]
zoom = Vector2( 1.8, 1.8 )

[node name="LaserBeam2D" parent="." index="9" instance=ExtResource( 5 )]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="Canion"]
